securitygroups.tf
resource "aws_security_group" "security_ansible" {
  description = "This is for ansible security"
  vpc_id      = aws_vpc.vpc.id
  ingress {
    from_port    = 22
    to_port      = 22
    protocol     = "tcp"
    cidr_blocks  = ["0.0.0.0/0"]
  } 
  ingress {
    from_port    = 0
    to_port      = 65536
    protocol     = "tcp"
    cidr_blocks  = ["0.0.0.0/0"]
  }
  egress {
    from_port    = 0
    to_port      = 0
    protocol     = "-1"
    cidr_blocks  = ["0.0.0.0/0"]
  }
  tags = {
    Name = "security_ansible"
  }

}
